@@ -2,6 +2,8 @@
 
 Bug fixes:
     - ``piped.graph`` now be compatible with ``networkx`` 1.7
+    - ``piped.util.wait_for_first`` will now errback with the actual failure, and
+      not a ``FirstError``.
 
 
 ========================== Release 0.4.7 2012-08-09 ==========================
